...
                padding: const EdgeInsets.all(8.0),
                child: ElevatedButton(
                    style: ElevatedButton.styleFrom(
                        backgroundColor: backgroundColor2),
                    onPressed: register,
                    child: Text(
                      "Crear una Cuenta",
                      style: TextStyle(color: titleColor),
                    )),
              )
            ],
          ),
        ),
...
